Fixed overlapping object on main page.

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .WeatherComponent {
-  position: auto;
+  position: relative;
   text-align: center;
   height: 115vh;
   width: 100vw;
@@ -39,6 +39,7 @@
   bottom: 0;
   left: 0;
   width: 100vw;
+  z-index: -1;
 }
 
 .Weather-info {
